tests/reference/asr-structs_09-f3ffe08.stderr
semantic error: read not present in StringIO dataclass
  --> tests/errors/structs_09.py:13:23
   |
13 |     bytes_read: i32 = fd.read()
   |                       ^^^^^^^^^ 
